fix after Ira Review