@@ -1,6 +1,5 @@
 package school.faang.user_service.service.goal;
 
-import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -9,93 +8,122 @@ import school.faang.user_service.dto.goal.GoalFilterDto;
 import school.faang.user_service.entity.Skill;
 import school.faang.user_service.entity.User;
 import school.faang.user_service.entity.goal.Goal;
+import school.faang.user_service.exception.NotFoundException;
+import school.faang.user_service.filter.goal.GoalFilter;
 import school.faang.user_service.mapper.GoalMapper;
+import school.faang.user_service.repository.SkillRepository;
 import school.faang.user_service.repository.UserRepository;
 import school.faang.user_service.repository.goal.GoalRepository;
-import school.faang.user_service.service.skill.SkillService;
 import school.faang.user_service.validator.GoalValidator;
 
-import java.util.Comparator;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
 public class GoalServiceImpl implements GoalService {
 
-
     private final GoalRepository goalRepository;
     private final UserRepository userRepository;
-    private final SkillService skillService;
+    private final SkillRepository skillRepository;
     private final GoalMapper goalMapper;
     private final GoalValidator goalValidator;
-
+    private final List<GoalFilter> goalFilters;
 
     @Override
     @Transactional
-    public List<GoalDto> findGoalsByUserId(long userId, GoalFilterDto goalFilterDto) {
-        goalValidator.validateThatIdIsGreaterThan0(userId);
+    public List<GoalDto> getGoalsByUser(long userId, GoalFilterDto goalFilterDto) {
+        goalValidator.validateGoalId(userId);
 
-        List<GoalDto> goals = goalRepository
-                .findGoalsByUserId(userId)
-                .map(goalMapper::toDto)
-                .toList();
+        Stream<Goal> goalStream = goalRepository.findGoalsByUserId(userId);
 
-        return goalValidator.validateGoalsByUserIdAndSort(goals, goalFilterDto);
+        return applyFilters(goalStream, goalFilterDto);
     }
 
-    @Override
     @Transactional
-    public GoalDto createGoal(Long userId, Goal goal) {
+    public List<GoalDto> getSubtasksByGoalId(long goalId, GoalFilterDto filter) {
+        goalValidator.validateGoalId(goalId);
+
+        Stream<Goal> goalStream = goalRepository.findByParent(goalId);
+
+        return applyFilters(goalStream, filter);
+    }
+
+    @Transactional
+    public GoalDto createGoal(Long userId, GoalDto goalDto) {
+
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new EntityNotFoundException("User not found"));
+                .orElseThrow(() -> new NotFoundException("User with id: " + userId + " not found"));
 
-        goalValidator.validateGoalCreation(user, goal);
+        goalValidator.validateUserGoalsAmount(user);
+        goalValidator.validateAllSkillsExist(goalDto);
 
-        List<Skill> skillsToAchieve = goal.getSkillsToAchieve();
+        Goal goal = goalMapper.toEntity(goalDto);
+        goalMapper.convertDtoIdsToEntity(goalDto, goal);
+        goal.setUsers(Collections.singletonList(user));
+        goal = goalRepository.save(goal);
 
-        skillsToAchieve.forEach(skill -> skill.getGoals().add(goal));
-
-        skillService.saveAll(skillsToAchieve);
-
-        return goalMapper.toDto(goalRepository.save(goal));
+        return goalMapper.toDto(goal);
     }
 
-    @Override
     @Transactional
     public GoalDto updateGoal(Long goalId, GoalDto goalDto) {
         Goal goalToUpdate = goalRepository.findById(goalId)
-                .orElseThrow(() -> new EntityNotFoundException("Goal not found"));
+                .orElseThrow(() -> new NotFoundException("Goal with id: " + goalId + " not found"));
 
-        goalValidator.validateGoalUpdate(goalToUpdate);
+        goalValidator.validateGoalNotCompleted(goalToUpdate);
 
         goalMapper.update(goalDto, goalToUpdate);
+        goalMapper.convertDtoIdsToEntity(goalDto, goalToUpdate);
+        assignSkills(goalToUpdate);
 
         return goalMapper.toDto(goalRepository.save(goalToUpdate));
     }
 
     @Override
     @Transactional
-    public void deleteGoal(long goalId) {
+    public GoalDto deleteGoal(long goalId) {
         Goal goal = goalRepository.findById(goalId)
-                .orElseThrow(() -> new EntityNotFoundException("Goal with id: " + goalId + " not found"));
-
-        goalRepository.delete(goal);
-    }
-
-    @Override
-    @Transactional
-    public List<GoalDto> findSubtasksByGoalId(long goalId) {
-        goalValidator.validateThatIdIsGreaterThan0(goalId);
+                .orElseThrow(() -> new NotFoundException("Goal with id: " + goalId + " not found"));
 
         List<Goal> subtasks = goalRepository.findByParent(goalId)
                 .toList();
 
-        goalValidator.validateFindSubtasks(subtasks, goalId);
+        goalRepository.deleteAll(subtasks);
+        goalRepository.delete(goal);
 
-        return subtasks.stream()
-                .sorted(Comparator.comparing(Goal::getId))
-                .map(goalMapper::toDto)
-                .collect(Collectors.toList());
+        return goalMapper.toDto(goal);
+    }
+
+    private List<GoalDto> applyFilters(Stream<Goal> goalStream, GoalFilterDto filter) {
+
+        if (filter == null) {
+            return goalStream.map(goalMapper::toDto).toList();
+        }
+
+        for (GoalFilter goalFilter : goalFilters) {
+            if (goalFilter.isAcceptable(filter)) {
+                goalStream = goalFilter.applyFilter(goalStream, filter);
+            }
+        }
+
+        return goalStream.map(goalMapper::toDto).toList();
+    }
+
+    private void assignSkills(Goal goalToUpdate) {
+
+        List<Skill> skills = goalToUpdate.getSkillsToAchieve();
+        List<User> usersCompletedGoal = goalToUpdate.getUsers();
+
+        if (skills == null || usersCompletedGoal == null) {
+            return;
+        }
+
+        for (User user : usersCompletedGoal) {
+            if (user != null) {
+                skills.forEach(skill -> skillRepository.assignSkillToUser(skill.getId(), user.getId()));
+            }
+        }
     }
 }
